trunk/Archive2/6a/4f3d2e7de18293/output
main.cpp:1:1: error: use of undeclared identifier 'std'
std::cout << alignof(std::max_align_t) << '\n';
^
main.cpp:1:11: error: expected unqualified-id
std::cout << alignof(std::max_align_t) << '\n';
          ^
2 errors generated.
